<resources>
    <string name="app_name">CS 408 Lab #2</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_rock_paper_scissors">Welcome to Rock-Paper-Scissors!</string>
    <string name="please_choose_your_weapon">Please choose your weapon:</string>
    <string name="rockButtonLabel">Rock</string>
    <string name="paperButtonLabel">Paper</string>
    <string name="scissorsButtonLabel">Scissors</string>
</resources>
