<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Lab2"
    tools:showIn="@layout/activity_lab2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_rock_paper_scissors"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/instructionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_your_weapon"
            android:textSize="18sp" />

        <Button
            android:id="@+id/rockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rockButtonClicked"
            android:text="@string/rockButtonLabel"
            android:textSize="18sp" />

        <Button
            android:id="@+id/paperButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="paperButtonClicked"
            android:text="@string/paperButtonLabel"
            android:textSize="18sp" />

        <Button
            android:id="@+id/scissorsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="scissorsButtonClicked"
            android:text="@string/scissorsButtonLabel"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/playerWeaponLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/computerWeaponLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/winnerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>